# exonum-test

./: .gitignore  Cargo.toml  config.toml  keys.keys  test.rs
examples/: create-wallet-1.json  create-wallet-2.json  wallets_info2.sh  wallets_info3.sh
src/: main.rs
~/.gotocc/db/: LOG  LOG.old
